rhai/codegen/ui_tests/export_mod_path_attr.stderr
error: expecting attribute name
  --> $DIR/export_mod_path_attr.rs:11:11
   |
11 | #[rhai_fn(rhai::name = "thing")]
   |           ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> $DIR/export_mod_path_attr.rs:22:8
   |
22 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of undeclared crate or module `test_mod`
